[project]
name = "env"
requires-python = ">=3.12,<4"
dependencies = [
    "linkml>=1.8.4,<1.9",
    "linkml-asciidoc-generator @ git+https://github.com/Netbeheer-Nederland/linkml-asciidoc-generator.git@v0.4.0",
    "gen-linkml-profile @ git+https://github.com/Netbeheer-Nederland/gen-linkml-profile.git",
    "check-jsonschema (>=0.31.0,<0.32.0)",
]
version = "1.0.0"
